--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link type="stylesheet" href="./static/css/style.css">
+    <script src="./static/js/main.js"></script>
+  </head>
+  <body>
+    <p>this works</p> 
+  </body>
+</html>
