--- a/index.html
+++ b/index.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link type="stylesheet" href="./static/css/style.css">
-    <script src="./static/js/main.js"></script>
-  </head>
-  <body>
-    <p>this works</p> 
-  </body>
+<head>
+    <title>My Portfolio Website</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+        .section {
+            background-color: #ffffff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col">
+                <h1 class="text-center">My Portfolio Website</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="section">
+                    <h3>Home</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="section">
+                    <h3>About</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="section">
+                    <h3>Portfolio</h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <div class="section">
+                    <h3>Services</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="section">
+                    <h3>Blog</h3>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="section">
+                    <h3>Contact</h3>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</body>
 </html>
