--- a/index.html
+++ b/index.html
@@ -27,24 +27,29 @@
         </div>
     </nav>
 
-    <div id="home" class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
-                <div class="section">
-                    <h3>Home</h3>
-                    <!-- Content for the home section... -->
-                </div>
+                <section id="home" class="section text-center">
+                    <h3>Welcome to My Portfolio</h3>
+                    <p>Hi, I'm Jacob Miller, a passionate data science enthusiast pursuing a Bachelor of Data Science at the University of Canterbury. I love exploring the world of data and uncovering valuable insights.</p>
+                    <p>Throughout my studies, I have gained a strong foundation in data analysis, machine learning, and data visualization. I enjoy applying these skills to solve real-world problems and make data-driven decisions.</p>
+                    <p>In this portfolio, you will find examples of my projects and work that showcase my skills and knowledge in the field of data science. Feel free to explore and get in touch if you have any questions or opportunities for collaboration.</p>
+                </section>
             </div>
         </div>
     </div>
 
-    <div id="about" class="container-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
-                <div class="section">
-                    <h3>About</h3>
-                    <!-- Content for the about section... -->
-                </div>
+                <section id="about" class="section text-center">
+                    <h3>About Me</h3>
+                    <p>I am an enthusiastic student passionate about VR game programming. Currently, I am enrolled in a VR game programming class where I am honing my skills and exploring the exciting world of virtual reality.</p>
+                    <p>Throughout the course, I have been learning various aspects of VR game development, including designing immersive environments, implementing interactive mechanics, and optimizing performance for a seamless experience.</p>
+                    <p>I enjoy pushing the boundaries of technology and creating captivating virtual experiences. Through hands-on projects, I have gained proficiency in tools and frameworks such as Unity, C#, and 3D modeling.</p>
+                    <p>If you are interested in collaborating on a VR game project or would like to learn more about my experience in the VR game programming class, feel free to reach out to me. You can contact me via email at <a href="mailto:jacobmiller0@protonmail.ch" style="color: lightblue">jacobmiller0@protonmail.ch</a>. Let's bring imagination to life in the virtual realm!</p>
+                </section>
             </div>
         </div>
     </div>
@@ -52,10 +57,24 @@
     <div id="portfolio" class="container-fluid">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
-                <div class="section">
-                    <h3>Portfolio</h3>
-                    <!-- Content for the portfolio section... -->
+                <!-- Portfolio Section -->
+                <section id="portfolio" class="section">
+                <h3>Portfolio</h3>
+                <div class="project">
+                    <div class="project-details">
+                    <img src="vr_escape_room.jpg" alt="VR Escape Room Project" class="project-img">
+                    <h4>VR Escape Room</h4>
+                    <p>For my VR escape room project, I focused on backend programming, particularly in designing the interactive elements. I developed an intuitive keypad system that challenges players to solve puzzles and unlock doors within the virtual environment. The backend implementation involves creating a robust code structure for handling user input, validating solutions, and managing game progression.</p>
+                    </div>
                 </div>
+                <div class="project">
+                    <div class="project-details">
+                    <img src="./static/img/beat.PNG" style="height: 15rem;" alt="Beat Saber Clone Project" class="project-img">
+                    <h4>Beat Saber Clone</h4>
+                    <p>In my Beat Saber clone project, I focused on the backend programming that drives the gameplay. One of the notable aspects is the utilization of bitmap images to read in the beat data in binary format. This backend feature enables precise synchronization between the music beats and the gameplay elements. Despite my emphasis on backend programming, the project also showcases my ability to integrate frontend components to create an enjoyable player experience.</p>
+                    </div>
+                </div>
+                </section>
             </div>
         </div>
     </div>
@@ -63,10 +82,21 @@
     <div id="contact" class="container-fluid">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
-                <div class="section">
-                    <h3>Contact</h3>
-                    <!-- Content for the contact section... -->
-                </div>
+                <section id="contact" class="section contact-section">
+                    <h3>Contact Me</h3>
+                    <p>If you have any questions, project inquiries, or just want to connect, feel free to reach out to me.</p>
+                    <div class="contact-links">
+                      <a href="https://github.com/jacobm3642" target="_blank" rel="noopener noreferrer" style="height: 5rem;">
+                        <img src="./static/img/github.png" alt="GitHub Icon" style="height: 5rem;" class="rounded-img">
+                      </a>
+                      <a href="https://eng-git.canterbury.ac.nz/jmi161" target="_blank" rel="noopener noreferrer" style="height: 5rem;">
+                        <img src="./static/img/gitlab.jpg" alt="GitLab Icon" style="height: 5rem;" class="rounded-img">
+                      </a>
+                      <a href="mailto:jacobmiller0@protonmail.ch">
+                        <img src="./static/img/email.png" alt="Email Icon" style="height: 5rem;" class="rounded-img">
+                      </a>
+                    </div>
+                  </section>
             </div>
         </div>
     </div>
