--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link" href="#vr-artillery-game">Future Project</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -62,7 +63,7 @@
                 <h3>Portfolio</h3>
                 <div class="project">
                     <div class="project-details">
-                    <img src="vr_escape_room.jpg" alt="VR Escape Room Project" class="project-img">
+                    <img src="./static/img/escaperoom.PNG" alt="VR Escape Room Project" class="project-img" style="height: 15rem;">
                     <h4>VR Escape Room</h4>
                     <p>For my VR escape room project, I focused on backend programming, particularly in designing the interactive elements. I developed an intuitive keypad system that challenges players to solve puzzles and unlock doors within the virtual environment. The backend implementation involves creating a robust code structure for handling user input, validating solutions, and managing game progression.</p>
                     </div>
@@ -78,6 +79,20 @@
             </div>
         </div>
     </div>
+    <div id="project" class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8 offset-lg-2">
+                <section id="vr-artillery-game" class="section">
+                    <h3>Future Project</h3>
+                    <div class="project-details">
+                      <p>VR Artillery Showdown is an exciting multiplayer VR game that brings intense battles to life. In this game, two teams compete against each other using realistic artillery weaponry, such as the powerful M777 howitzer. The objective is to strategically eliminate the opposing team and dominate the battlefield.</p>
+                      <p>Players will immerse themselves in the role of artillery operators, where they can adjust the angle, elevation, and power of their shots with precision. The game leverages advanced physics simulation to accurately replicate projectile trajectories, taking into account factors like wind speed and gravity.</p>
+                      <p>Teamwork and coordination are crucial to victory, as players must strategize their shots, communicate with teammates, and make calculated decisions in real-time. The immersive VR environment adds to the intensity, with realistic sound effects and visuals that transport players to the heart of the battle.</p>
+                      <p>While the game focuses on the excitement of artillery combat, it also incorporates elements of resource management and base defense. Teams will need to allocate resources wisely, fortify their positions, and defend against enemy attacks, adding another layer of strategy to the gameplay.</p>
+                    </div>
+                  </section>
+            </div>
+        </div>
 
     <div id="contact" class="container-fluid">
         <div class="row">
