--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div id="project" class="container-fluid">
         <div class="row">
             <div class="col-lg-8 offset-lg-2">
-                <section id="vr-artillery-game" class="section">
+                <section id="vr-artillery-game" class="section text-center">
                     <h3>Future Project</h3>
                     <div class="project-details">
                       <p>VR Artillery Showdown is an exciting multiplayer VR game that brings intense battles to life. In this game, two teams compete against each other using realistic artillery weaponry, such as the powerful M777 howitzer. The objective is to strategically eliminate the opposing team and dominate the battlefield.</p>
